@@ -140,18 +140,6 @@ namespace dolfin {
     void remove(Edge& edge);
     void remove(Face& face);
 
-    // Return cell marker
-    Cell::Marker& cellMarker(int id);
-    
-    // Mark edge by given cell
-    void edgeMark(int id, Cell& cell);
-
-    // Check if edge is marked
-    bool edgeMarked(int id);
-
-    // Check if edge is marked by given cell
-    bool edgeMarked(int id, Cell& cell);
-
     /// Compute connectivity
     void init();
 
